--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
     
-  <head th:replace="fragments/common :: head('게시판')">
+  <head th:replace="~{fragments/common :: head('게시판')}">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +13,7 @@
     <title>게시판</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('board')">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="~{fragments/common :: menu('board')}">
   <!-- <a class="navbar-brand" href="#">Spring Boot Tutorial</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,15 @@
 
 <div class="container">
     <h2>게시판</h2>
-    <div>총 건수 : <span th:text="${#lists.size(boards)}"></span></div>
+    <br/>
+    <div>총 건수 : <span th:text="${boards.totalElements}"></span></div>
+    <form class="form-inline d-flexx justify-content-end" method="GET" th:action="@{/board/list}">
+      <div class="form-group mx-sm-3 mb-2">
+        <label for="searchText" class="sr-only">검색</label>
+        <input type="text" class="form-control" id="searchText" name="searchText" th:value="${param.searchText}" placeholder="제목을 입력하세요">
+      </div>
+      <button type="submit" class="btn btn-light mb-2">검색</button>
+    </form>
     <table class="table table-striped">
       <thead>
         <tr>
@@ -50,6 +58,20 @@
         </tr>
       </tbody>
     </table>
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
+        <li class="page-item" th:classappend="${1 == boards.pageable.pageNumber +1} ? 'disabled'">
+          <a class="page-link" href="#" th:href="@{/board/list(page=${boards.pageable.pageNumber -1}, searchText=${param.searchText})}"
+          tabindex="-1" aria-disabled="true">Previous</a>
+        </li>
+        <li class="page-item" th:classappend="${i == boards.pageable.pageNumber +1} ? 'disabled' " th:each="i : ${#numbers.sequence(startPage, endPage)}">
+          <a class="page-link" href="#" th:href="@{/board/list(page=${i -1}, searchText=${param.searchText})}" th:text="${i}">1</a>
+        </li>
+        <li class="page-item" th:classappend="${boards.totalPages == boards.pageable.pageNumber +1} ? 'disabled'">
+          <a class="page-link" href="#" th:href="@{/board/list(page=${boards.pageable.pageNumber +1}, searchText=${param.searchText})}">Next</a>
+        </li>
+      </ul>
+    </nav>
     <div class="text-right">
       <a type="button" class="btn btn-primary" th:href="@{/board/form}">쓰기</a>
     </div>
