--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" 
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
     <head th:fragment="head(title)">
         <!-- Required meta tags -->
@@ -8,7 +9,7 @@
     
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link href="starter-template.css" th:href="@{/starter-template.css}" rel="stylesheet">
+        <link href="starter-template.css" th:href="@{/css/starter-template.css}" rel="stylesheet">
     
         <title th:text="${title}">Hello, Spring Boot!</title>
     </head>
@@ -39,10 +40,15 @@
                   </div>
                 </li> -->
               </ul>
-              <!-- <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-              </form> -->
+
+              <a class="btn btn-secondary my-2 mr-2 my-sm-0" th:href="@{/account/login}" sec:authorize="isAnonymous()">로그인</a>
+              <a class="btn btn-secondary my-2 my-sm-0" th:href="@{/account/register}" sec:authorize="isAnonymous()">회원가입</a>
+              <form class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="post" sec:authorize="isAuthenticated()">
+                <!-- <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> -->
+                <span class="text-white" sec:authentication="name">사용자</span>
+                <span class="text-white mx-2" sec:authentication="principal.authorities">권한</span>
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Logout</button>
+              </form>
             </div>
           </nav>
     </body>
